account-service/accountservice-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: account-service
  labels: 
    app: account-service
spec:
  selector:
    app: account-service
  ports:
  - name: http
    port: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-v0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
      version: v0
  template:
    metadata:
      labels:
        app: account-service
        version: v0
    spec:
      containers:
        - name: account-service
          image: account-service:v0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
      version: v1
  template:
    metadata:
      labels:
        app: account-service
        version: v1
    spec:
      containers:
        - name: account-service
          image: account-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
