account-service/accountservice.yml
kind: Service
apiVersion: v1
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  selector:
    app: account-service
  ports:
  - name: http
    port: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
      version: v0
  template:
    metadata:
      labels:
        app: account-service
        version: v0
    spec:
      containers:
      - name: account-service
        image: account-service:v0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
