account-service/accountservice-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-service
spec:
  host: account-service
  subsets:
  - name: v0
    labels:
      version: v0
  - name: v1
    labels:
      version: v1
