account-service/accountservice-virtualservice-50-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service
spec:
  hosts:
    - account-service
  http:
  - route:
    - destination:
        host: account-service
        subset: v0
      weight: 50
    - destination:
        host: account-service
        subset: v1
      weight: 50
