account-service/accountservice-virtualservice-v0-only.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service
spec:
  hosts:
  - account-service
  http:
  - route:
    - destination:
        host: account-service
        subset: v0
